--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +12,67 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(181, 249, 255);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1{
+  color: rgb(53, 188, 241);
+}
+
+.todoList{
+  width: 500px;
+  border: 2px solid rgb(53, 188, 241);
+  margin: 20px; 
+  padding: 10px;
+  margin: 200px auto;
+  background-color: rgb(235, 235, 235);
+  box-shadow: 0px 0px 50px rgb(53, 188, 241);
+}
+
+
+
+.form{
+  text-align: center;
+  width: 100%;
+}
+
+.form input{
+  width: 70%;
+  height: 30px;
+  padding-left: 10px;
+  border-color: rgb(53, 188, 241);;
+}
+.form button{
+  width: 20%;
+  margin: 3%;
+  height: 30px;
+  background-color: rgb(53, 188, 241);
+  border: none;
+  border-radius: 5px;
+  
+}
+
+.fas{
+  color: red;
+  padding: 10px;
+}
+
+.listText{
+  text-transform: capitalize;
+  color: rgb(53, 188, 241);
+  padding-left: 15px;
+  width: 80%;
+  float: left;
+  font-size: 18px;
+  
+  
+}
+
+.flex{
+  margin-bottom: 20px;
 }
